添加了部分美股蜡烛图页面的股票信息，添加了两个多线程更新股票的方法。

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <module>fzc-user</module>
         <module>fzc-stock</module>
         <module>fzc-futu</module>
+        <module>fzc-common</module>
+        <module>fzc-gateway</module>
+        <module>fzc-stock-us</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
