--- a/xxl-job/xxl-job-admin/pom.xml
+++ b/xxl-job/xxl-job-admin/pom.xml
@@ -66,12 +66,19 @@
 			<version>${mysql-connector-java.version}</version>
 		</dependency>
 
-		<!-- xxl-job-core -->
+<!--		 xxl-job-core -->
 		<dependency>
 			<groupId>com.xuxueli</groupId>
 			<artifactId>xxl-job-core</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+
+		<!-- XXL-JOB 相关依赖
+		<dependency>
+			<groupId>com.xuxueli</groupId>
+			<artifactId>xxl-job-core</artifactId>
+			<version>2.1.1</version>
+		</dependency>-->
 
 	</dependencies>
 
