暂时移除jwt，一些user模块修改

--- a/fzc-user/pom.xml
+++ b/fzc-user/pom.xml
@@ -25,10 +25,16 @@
 <!--        </dependency>-->
 
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        <!--<dependency>
+            <groupId>com.fzc</groupId>
+            <artifactId>fzc-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -49,12 +55,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <!-- 实现对 Redisson 的自动化配置 -->
-        <dependency>
+<!--         实现对 Redisson 的自动化配置 -->
+        <!--<dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.3</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>commons-io</groupId>
