--- a/fzc-stock-us/pom.xml
+++ b/fzc-stock-us/pom.xml
@@ -64,11 +64,11 @@
         </dependency>
 
         <!-- 实现对 Redisson 的自动化配置 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.3</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>commons-io</groupId>
