--- a/fzc-futu/src/main/resources/application.yml
+++ b/fzc-futu/src/main/resources/application.yml
@@ -3,6 +3,14 @@ server:
 
 
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://localhost:8848
+      config:
+        server-addr: http://localhost:8848
+        file-extension: yaml
+
   data:
     mongodb:
       uri: mongodb://flamenco:123456@120.77.182.105:27017/flamenco?main?authSource=admin&authMechanism=SCRAM-SHA-1
@@ -40,10 +48,10 @@ spring:
       additional-paths: src/java/main
       additional-exclude: static/**,public/**,WEB-INF/**
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://127.0.0.1:10086/eureka
   instance:
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 15
