--- a/fzc-stock/src/main/resources/application.yml
+++ b/fzc-stock/src/main/resources/application.yml
@@ -3,6 +3,13 @@ server:
 
 
 spring:
+  cloud:
+    nacos:
+      discovery:
+        server-addr: http://localhost:8848
+      config:
+        server-addr: http://localhost:8848
+        file-extension: yaml
   application:
     name: fzc-stock
   datasource:
@@ -20,13 +27,13 @@ spring:
       additional-paths: src/java/main
       additional-exclude: static/**,public/**,WEB-INF/**
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:10086/eureka
-  instance:
-    lease-renewal-interval-in-seconds: 5
-    lease-expiration-duration-in-seconds: 15
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://127.0.0.1:10086/eureka
+#  instance:
+#    lease-renewal-interval-in-seconds: 5
+#    lease-expiration-duration-in-seconds: 15
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
