--- a/fzc-stock-us/src/main/resources/application.yml
+++ b/fzc-stock-us/src/main/resources/application.yml
@@ -48,7 +48,6 @@ spring:
     username: guest
     password: guest
   data:
-    elasticsearch:
     mongodb:
 #      auto-index-creation: true
 #      host: localhost # mongodb\u7684\u8FDE\u63A5\u5730\u5740
@@ -90,9 +89,9 @@ spring:
 #  client:
 #    service-url:
 #      defaultZone: http://127.0.0.1:10086/eureka
-  instance:
-    lease-renewal-interval-in-seconds: 5
-    lease-expiration-duration-in-seconds: 15
+#  instance:
+#    lease-renewal-interval-in-seconds: 5
+#    lease-expiration-duration-in-seconds: 15
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml
