我的寒假怎么没了

--- a/fzc-user-shiro/src/main/resources/boostrap.yml
+++ b/fzc-user-shiro/src/main/resources/boostrap.yml
@@ -5,7 +5,7 @@
 #    name: mall-admin
 spring:
   application:
-    name: fzc-user
+    name: fzc-user-shiro
   cloud:
     nacos:
       discovery:
