--- a/fzc-stock-a/pom.xml
+++ b/fzc-stock-a/pom.xml
@@ -84,6 +84,12 @@
             <version>5.4.1608</version>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+<!--            <scope>test</scope>-->
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.3</version>
