--- a/fzc-search-es/pom.xml
+++ b/fzc-search-es/pom.xml
@@ -88,6 +88,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.7.0</version>
+            <scope>compile</scope>
         </dependency>
 
 
