--- a/fzc-stock-us/pom.xml
+++ b/fzc-stock-us/pom.xml
@@ -93,6 +93,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.7.0</version>
+            <scope>compile</scope>
         </dependency>
         <!--集成消息队列-->
         <dependency>
