--- a/fzc-user-shiro/pom.xml
+++ b/fzc-user-shiro/pom.xml
@@ -144,6 +144,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.7.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
